--- a/templates/about.html
+++ b/templates/about.html
@@ -1,44 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}
-Về nhóm chúng tôi
+Liên hệ
 {% endblock %}
 {% block content %}
 
 <div class="row" style="margin-top:20px; margin-left:20px; margin-right:20px">
    <div class="col">
-      <h2>Phân công công việc</h2>
+      <h2>Địa chỉ, email, fb,...</h2>
       <br>
-      <table class="table table-hover center table table-bordered" style="width:100%" align="center">
-         <thead>
-            <tr>
-               <th scope="col" style="width:15%" class="text-center">Mã số HV</th>
-               <th scope="col" style="width:25%" class="text-center">Tên</th>
-               <th scope="col" style="width:60%" class="text-center">Công việc</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr>
-               <td class="text-center"> 21C29010 </td>
-               <td> Nguyễn Thị Thảo Ly </td>
-               <td> </td>
-            </tr>
-            <tr>
-               <td class="text-center"> 21C29013 </td>
-               <td> Phạm Anh Quân </td>
-               <td> </td>
-            </tr>
-            <tr>
-               <td class="text-center"> 21C29031 </td>
-               <td> Nguyễn Thị Kim Yến </td>
-               <td> </td>
-            </tr>
-            <tr>
-               <td class="text-center"> 21C29033 </td>
-               <td> Nguyễn Thuỵ Nguyệt Quỳnh </td>
-               <td> </td>
-            </tr>
-         </tbody>
-      </table>
    </div>
 </div>
 {% endblock %}
